src/objects/Apttus_Config2__ProductInformation__c.object
<CustomObject>
    <description>Represents information associated with a product or a classification</description>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the category. This is no longer used.</description>
        <label>Category (Deprecated)</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Category Information (Deprecated)</relationshipLabel>
        <relationshipName>CategoryInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContentUrl__c</fullName>
        <description>The information content url</description>
        <label>Content Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The information description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EmbedCode__c</fullName>
        <description>Represents code for embedded audio or video.</description>
        <inlineHelpText>Enter embed code for video. For example 
&lt;iframe id=&quot;youtube&quot; style=&quot;display: none;&quot; title=&quot;YouTube video player&quot; width=&quot;640&quot; height=&quot;390&quot; src=&quot;http://www.youtube.com/embed/UZnP6prUWsU&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</inlineHelpText>
        <label>Embed Code</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FileId__c</fullName>
        <description>Holds information about uploaded file</description>
        <label>File</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InformationType__c</fullName>
        <label>Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attached File</fullName>
                </value>
                <value>
                    <fullName>URL Address</fullName>
                </value>
                <value>
                    <fullName>Embedded Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Information</relationshipLabel>
        <relationshipName>ProductInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The display sequence of product collateral within the type it belongs to</description>
        <inlineHelpText>The display sequence of product collateral within the type it belongs to</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>Identifies the type of product collateral</description>
        <inlineHelpText>Identifies the type of product collateral</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Marketing Flyer</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>